Layout issues fixed

--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -42,12 +42,11 @@ body {
 
 .sidebar {
 	background-color: rgba(255,255,255,.05);
-	min-height: 100vh;
-
 
 	@media screen and (min-width: 1200px) {
 		position: fixed;
 		width: 400px;
+		min-height: 100vh;
 	}
 
 	@media screen and (min-width: 1300px) {
@@ -296,6 +295,19 @@ body {
 		-webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.2);
 		-moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.2);
 		box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.2);
+
+		@media screen and (max-width: 991px) {
+			height: auto;
+		}
+
+		@media screen and (max-width: 768px) {
+			width: 90%;
+			float: none;
+			display: block;
+			margin-right: auto;
+			margin-left:auto;
+		}
+
 	}
 	figure.portfolio-item * {
 		-webkit-box-sizing: padding-box;
